--- a/TODO
+++ b/TODO
@@ -4,3 +4,4 @@
 - hide navbar when launching fullscreen app and show navbar when joining the homescreen
 - make blur effect on background
 - doubleclick on background to remove blur effect on background, doubleclick to make blur effect
+- block 'Themes' if a fullscreen app is open
